# MobileNetV3_train-inference

./: CMakeLists.txt  FineTuneFaceDetect.ipynb  README.md  kohya-LoRA-trainer-XL.ipynb
fames/: read.me
inference/: main.cpp
